--- a/artefacts/calculator-template.html
+++ b/artefacts/calculator-template.html
@@ -9,3 +9,18 @@
 <div>[Result]</div>
 
 <!-- Create a component 'CalculatorOneComponent' for selector 'calculator-one' -->
+
+<h1>Calculator-2</h1>
+<hr>
+<input type="number">
+<select>
+	<option value="add">Add</option>
+	<option value="subtract">Subtract</option>
+	<option value="multiply">Multiply</option>
+	<option value="divide">Divide</option>
+</select>
+<input type="number">
+<input type="button" value="Calculate">
+<div>[Result]</div>
+
+<!-- Create a component 'CalculatorTwoComponent' for selector 'calculator-two' -->
