--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -12,24 +12,25 @@
 		(done) 6. Improve bug display
 		(done) 7. Sort the bugs
 		8. Persist the bugs in the 'localStorage'
-		window.localStorage
-		====================
-			* key/value store
-			* both key and value must be strings
-				(use JSON.stringify & JSON.parse for serialization and deserialization respectively)
-			* key has to be unique
-			* Same Origin Policy
-			* ~10MB storage limit
-			* APIs
-			------
-				- setItem(key, value)
-				- getItem(key) => value
-				- removeItem(key)
-				- clear()
-				- key(index)
-				- length
+			window.localStorage
+			====================
+				* key/value store
+				* both key and value must be strings
+					(use JSON.stringify & JSON.parse for serialization and deserialization respectively)
+				* key has to be unique
+					(introduce an 'id' attribute for each bug with incremental value e.g 1,2,3....)
+				* Same Origin Policy
+				* ~10MB storage limit
+				* APIs
+				------
+					- setItem(key, value)
+					- getItem(key) => value
+					- removeItem(key)
+					- clear()
+					- key(index)
+					- length
 
-				
+
 		9. Display 'createdAt' for the bugs
 		10. Persist the bugs in th server
 		11. Make the bugs accessible using unique URLs
