--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -29,7 +29,7 @@
 							- clear()
 							- key(index)
 							- length
-		9. Display 'createdAt' for the bugs
+		(done) 9. Display 'createdAt' for the bugs
 		10. Persist the bugs in th server
 		11. Make the bugs accessible using unique URLs
 	</script>
